--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,26 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Get Shit Done" />
+    <meta
+      property="og:description"
+      content="Track of your tasks! It is an offline to do app."
+    />
+    <meta name="author" content="shubham chadokar" />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/RD2006_BarnImages.com_.jpg"
+    />
+    <meta property="og:url" content="http://mytasks.surge.sh" />
+
+    <meta name="title" content="Get Shit Done" />
+    <meta
+      name="description"
+      content="Get shit done is the offline app to track your tasks."
+    />
+    <meta name="author" content="shubham chadokar" />
+    <meta name="image" content="%PUBLIC_URL%/RD2006_BarnImages.com_.jpg" />
+    <meta name="url" content="http://mytasks.surge.sh" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -12,11 +32,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300"
+      href="https://fonts.googleapis.com/css?family=Lobster+Two|Open+Sans|Orbitron|Permanent+Marker&display=swap"
       rel="stylesheet"
-      type="text/css"
     />
-
     <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
@@ -30,7 +48,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ToDo App</title>
+    <title>Get Shit Done</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
