otda: readme updated and meta data changed in index

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/RD2006_BarnImages.com_.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Get Shit Done" />
     <meta
       property="og:description"
-      content="Track of your tasks! It is an offline to do app."
+      content="Get shit done is the offline app to track your tasks."
     />
     <meta name="author" content="shubham chadokar" />
     <meta
       property="og:image"
       content="%PUBLIC_URL%/RD2006_BarnImages.com_.jpg"
     />
-    <meta property="og:url" content="http://mytasks.surge.sh" />
+    <meta property="og:url" content="http://getshitdone.surge.sh" />
 
     <meta name="title" content="Get Shit Done" />
     <meta
@@ -24,7 +24,7 @@
     />
     <meta name="author" content="shubham chadokar" />
     <meta name="image" content="%PUBLIC_URL%/RD2006_BarnImages.com_.jpg" />
-    <meta name="url" content="http://mytasks.surge.sh" />
+    <meta name="url" content="http://getshitdone.surge.sh" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
