--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="%PUBLIC_URL%/config/env.js"></script>
     <title>To Do App</title>
   </head>
   <body>
